ClearZone refactor